--- a/src/assets/scss/freeTrialInputSection.scss
+++ b/src/assets/scss/freeTrialInputSection.scss
@@ -17,6 +17,14 @@
       ". . Form";
     position: relative;
 
+    @media screen and (max-width: $cellphone) {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      position: inherit;
+      gap: 1rem 0;
+    }
+
     &::before {
       position: absolute;
       content: "";
@@ -31,6 +39,12 @@
         border-bottom: 200px solid transparent;
         border-right: 700px solid $white;
         right: -32px !important;
+      }
+
+      @media screen and (max-width: $cellphone) {
+        right: 0px !important;
+        border-bottom: 100px solid transparent;
+        border-right: 200px solid $white;
       }
     }
 
@@ -48,6 +62,11 @@
 
       .moreOpportunitiesForYouTitle {
         font-size: 56px;
+
+        @media screen and (max-width: $cellphone) {
+          font-size: 40px;
+          margin-top: 0;
+        }
 
         .moreOpportunitiesForYouTitleColor {
           color: $primary-color-60;
@@ -72,10 +91,14 @@
       background-size: cover;
       z-index: 0;
 
+      @media screen and (max-width: $cellphone) {
+        margin-top: 2rem;
+        z-index: 1;
+      }
+
       &::before {
         position: absolute;
         content: "";
-        background-color: $primary-color-100;
         z-index: -1;
         pointer-events: none;
         border-bottom: 50px solid transparent;
@@ -87,6 +110,13 @@
         @media screen and (max-width: $smallerdesktop) {
           left: -150px;
           border-bottom: 60px solid transparent;
+        }
+
+        @media screen and (max-width: $cellphone) {
+          left: -180px;
+          border-bottom: 200px solid transparent;
+          top: -1px;
+          z-index: -1;
         }
       }
 
@@ -104,12 +134,21 @@
         @media screen and (max-width: $smallerdesktop) {
           left: -34px;
         }
+
+        @media screen and (max-width: $cellphone) {
+          left: -19px;
+          z-index: -2;
+        }
       }
 
       .togetherSinceFirstStepTitle {
         font-size: 32px;
         color: $white;
         margin-top: 0;
+
+        @media screen and (max-width: $cellphone) {
+          font-size: 24px;
+        }
       }
 
       .togetherSinceFirstStepText {
@@ -132,6 +171,10 @@
       padding: 2rem;
 
       margin-top: 2.5rem;
+      
+      @media screen and (max-width: $cellphone) {
+        width: auto;
+      }
 
       .freeTrialFormTitleSection {
         display: flex;
@@ -146,6 +189,10 @@
           margin-top: 0;
           margin-bottom: 1rem;
           font-size: 24px;
+
+          @media screen and (max-width: $cellphone) {
+            font-size: 20px;
+          }
         }
 
         .freeTrialFormSubTitle {
@@ -173,6 +220,7 @@
           display: flex;
           flex-direction: column;
           justify-content: space-between;
+          margin-top: 0.5rem;
 
           label,
           span {
@@ -186,6 +234,12 @@
             box-shadow: inset 6px 6px 0px #eefbfb;
             height: 40px;
             padding: 0.5rem;
+            background-color: $white;
+
+            @media screen and (max-width: $cellphone) {
+              padding: 0.7rem;
+            }
+
             &:invalid {
               color: $gray-60;
             }
@@ -227,12 +281,20 @@
           cursor: pointer;
           height: 40px;
 
+          @media screen and (max-width: $cellphone) {
+            width: 75vw;
+          }
+
           &::after {
             @include bottomButtonTrapezoid;
             width: 26.5rem;
             height: 0;
             left: 0;
             bottom: -4px;
+
+            @media screen and (max-width: $cellphone) {
+              width: 72vw;
+            }
           }
         }
       }
@@ -262,4 +324,9 @@
   margin-left: 400px;
   z-index: 2;
   cursor: pointer;
+
+  @media screen and (max-width: $cellphone) {
+    margin-left: calc(100% - 2rem);
+    margin-top: -28px;
+  }
 }
