--- a/src/assets/scss/rdProsCards.scss
+++ b/src/assets/scss/rdProsCards.scss
@@ -12,6 +12,8 @@
 
   @media screen and (max-width: $cellphone) {
     max-width: $layout-width-cellphone;
+    margin-top: -9rem;
+    margin-bottom: 2rem;
   }
 
   .rdProsTitle {
@@ -19,6 +21,12 @@
     width: 50%;
     margin-bottom: 4rem;
     color: $gray-100;
+
+    @media screen and (max-width: $cellphone) {
+      font-size: 32px;
+      width: 100%;
+      margin-bottom: 1rem;
+    }
   }
 
   .rdProsCardsContent {
@@ -27,6 +35,11 @@
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 1.5rem;
     grid-row-gap: 1.5rem;
+
+    @media screen and (max-width: $cellphone) {
+      display: flex;
+      flex-direction: column;
+    }
 
     .rdProsCardsIndividualCard {
       box-shadow: 0px 4px 12px rgba(33, 36, 41, 0.14);
