--- a/src/assets/scss/headerAndFooter.scss
+++ b/src/assets/scss/headerAndFooter.scss
@@ -218,3 +218,53 @@ footer {
 .navBar {
   position: relative;
 }
+
+.menuHamburgerOpened {
+  position: absolute;
+  background-color: $white;
+  height: 50vh;
+  width: 100vw;
+  z-index: 10;
+
+  .headerNavDiv {
+    @media screen and (max-width: $cellphone) {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      justify-content: flex-start;
+      box-shadow: 0px 4px 12px rgba(33, 36, 41, 0.14);
+      margin-top: 1rem;
+      height: 100vh;
+      background-color: rgba(black, 0.5);
+    }
+
+    .navBar {
+      @media screen and (max-width: $cellphone) {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: flex-start;
+        background-color: $white;
+      }
+
+      a {
+        padding: 1rem;
+        border-bottom: 1px solid $gray-30;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        padding-left: 0;
+      }
+    }
+
+    .navBarButtons {
+      @media screen and (max-width: $cellphone) {
+        background-color: $gray-10;
+        width: 100%;
+        height: 15%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
+}
